# wind_dashboard_smb

./: .dockerignore  .env.example  .gitignore  Readme.md  docker-compose.yaml  system_architecture_audit.md
Backend/: Dockerfile  __init__.py  database.py  main.py  models.py  pyproject.toml
Backend/alerts/: __init__.py  state_machine.py
Backend/ingestion/: __init__.py  collector.py
alembic/: README  env.py
alembic/versions/: 001_initial_schema.py  48193f037162_add_composite_index_on_telemetry.py
android_app/: .gitignore  README.md  settings.gradle.kts
android_app/app/: build.gradle.kts  proguard-rules.pro
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/aeromdc/aeromonitor/: MainActivity.kt
android_app/app/src/main/java/com/aeromdc/aeromonitor/data/model/: Models.kt
android_app/app/src/main/java/com/aeromdc/aeromonitor/data/network/: AeroMonitorApi.kt  InMemoryCookieJar.kt  RooktecScraper.kt
android_app/app/src/main/java/com/aeromdc/aeromonitor/data/repository/: AeroMonitorRepository.kt
android_app/app/src/main/java/com/aeromdc/aeromonitor/util/: AppPreferences.kt
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/gradle/: libs.versions.toml
frontend/: Alert Notification Code.html  Alert Notification Design.md  Dashboard Code.html  Dashboard_Code.html  History_Log_Code.html  Readme.md
nginx/: nginx.conf
openspec/changes/05_wind_backend_alerts/: design.md  proposal.md  tasks.md
scripts/: seed.py
wind_scraper/: .gitignore  wind_data_collector.py
(+8 files in other folders)
